src/config/snapshots/handlr__config__main_config__tests__show_handler_json_terminal.snap
---
source: src/config/main_config.rs
expression: "String::from_utf8(buffer)?"
---
{"cmd":"hx ","handler":"tests/assets/Helix.desktop","name":"Helix"}
