src/config/snapshots/handlr__config__main_config__tests__terminal_command_fallback.snap
---
source: src/config/main_config.rs
expression: "String :: from_utf8(buffer).expect(\"Buffer is invalid utf8\")"
---
[2m[TIMESTAMP][0m [32m INFO[0m [2mhandlr::apps::user[0m[2m:[0m No handlers configured for `x-scheme-handler/terminal` in mimeapps.list Default associations
[2m[TIMESTAMP][0m [32m INFO[0m [2mhandlr::config::main_config[0m[2m:[0m No match for `x-scheme-handler/terminal` in mimeapps.list Default Associations
[2m[TIMESTAMP][0m [32m INFO[0m [2mhandlr::config::main_config[0m[2m:[0m No matching entries for `x-scheme-handler/terminal` in mimeapps.list Added Associations
[2m[TIMESTAMP][0m [34mDEBUG[0m [2mhandlr::apps::system[0m[2m:[0m No installed handlers found for `x-scheme-handler/terminal`
[2m[TIMESTAMP][0m [32m INFO[0m [2mhandlr::config::main_config[0m[2m:[0m No matching installed handlers found for `x-scheme-handler/terminal`
